--- a/angular.json
+++ b/angular.json
@@ -44,6 +44,27 @@
               "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
+              "buildOptimizer": true,
+              "i18nFile": "src/locale/messages.en.xlf",
+              "i18nFormat": "xlf",
+              "i18nLocale": "en",
+              "i18nMissingTranslation": "error"
+            },
+            "qa": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.qa.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": true,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
               "buildOptimizer": true
             }
           }
@@ -56,6 +77,9 @@
           "configurations": {
             "production": {
               "browserTarget": "error-note:build:production"
+            },
+            "qa": {
+              "browserTarget": "error-note:build:qa"
             }
           }
         },
