prueba con carga de archivo desde librería en registro de nota

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular2-notifications": "^1.0.4",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ng2-file-upload": "^1.3.0",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
