--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@okta/okta-angular": "^1.0.7",
+    "@okta/okta-signin-widget": "^2.14.0",
     "angular2-notifications": "^1.0.4",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
