--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@okta/okta-signin-widget": "^2.14.0",
     "angular2-notifications": "^1.0.4",
     "core-js": "^2.5.4",
+    "enote-lib": "file:../enote-lib/dist/enote-lib/enote-lib-0.0.1.tgz",
     "hammerjs": "^2.0.8",
     "ng2-file-upload": "^1.3.0",
     "rxjs": "~6.2.0",
